# cf-patch-doh

./: .dockerignore  .flake8  Dockerfile  README.md  app.py  dns_utils.py  fly.toml  pyproject.toml  test.py
cf_patch_doh/: app.py  cloudflare.py  dns_utils.py
